--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -6,73 +6,65 @@
     android:layout_height="match_parent"
     android:fillViewport="true">
 
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/main"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".view.HomeActivity">
-
-    <androidx.appcompat.widget.SearchView
-        android:id="@+id/search"
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/main"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="12dp"
-        android:focusable="false"
-        app:closeIcon="@drawable/baseline_clear_24"
-        app:iconifiedByDefault="false"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:queryHint="@string/search_hint"
-        app:searchHintIcon="@null"
-        app:searchIcon="@drawable/baseline_search_24" />
+        tools:context=".view.HomeActivity">
 
-    <TextView
-        android:id="@+id/tvHello"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/tvWeatherInfo"
-        app:layout_constraintBottom_toTopOf="@id/btnLogout"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        />
+        <ImageView
+            android:id="@+id/ivLogout"
+            android:layout_width="35dp"
+            android:layout_height="35dp"
+            android:layout_marginTop="16dp"
+            android:layout_marginEnd="12dp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toTopOf="@id/search"
+            android:src="@drawable/baseline_logout_24"
+            />
 
-    <Button
-        android:id="@+id/btnLogout"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/logout"
-        app:layout_constraintTop_toTopOf="@+id/tvHello"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        />
-    <EditText
-        android:id="@+id/etStartDate"
-        android:layout_width="150dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
-        android:hint="@string/start_date_text"
-        android:focusable="false"
-        android:drawableEnd="@drawable/baseline_calendar_month_24"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/search" />
+        <androidx.appcompat.widget.SearchView
+            android:id="@+id/search"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="18dp"
+            android:layout_marginEnd="12dp"
+            android:layout_marginStart="12dp"
+            android:background="@drawable/search_view_border"
+            android:focusable="false"
+            app:closeIcon="@drawable/baseline_clear_24"
+            app:iconifiedByDefault="false"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/ivLogout"
+            app:queryHint="@string/search_hint"
+            app:searchHintIcon="@null"
+            app:searchIcon="@drawable/baseline_search_24" />
 
-    <EditText
-        android:id="@+id/etEndDate"
-        android:layout_width="150dp"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="16dp"
-        android:hint="@string/end_date_text"
-        android:focusable="false"
-        android:drawableEnd="@drawable/baseline_calendar_month_24"
-        android:src="@drawable/baseline_calendar_month_24"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@id/etStartDate" />
+        <EditText
+            android:id="@+id/etStartDate"
+            android:layout_width="150dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="16dp"
+            android:hint="@string/start_date_text"
+            android:focusable="false"
+            android:drawableEnd="@drawable/baseline_calendar_month_24"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/search" />
+
+        <EditText
+            android:id="@+id/etEndDate"
+            android:layout_width="150dp"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="16dp"
+            android:hint="@string/end_date_text"
+            android:focusable="false"
+            android:drawableEnd="@drawable/baseline_calendar_month_24"
+            android:src="@drawable/baseline_calendar_month_24"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="@id/etStartDate" />
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/tvWeatherInfo"
@@ -109,5 +101,132 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent" />
         </androidx.constraintlayout.widget.ConstraintLayout>
+
+        <!--   Chat Bot     -->
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/chatBotLayout"
+            android:layout_width="match_parent"
+            android:layout_height="550dp"
+            android:layout_marginTop="45dp"
+            android:background="@drawable/chatbot_background"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/tvWeatherInfo">
+
+            <!--     Welcome Chatbot       -->
+            <ImageView
+                android:id="@+id/ivChatBot"
+                android:layout_width="41dp"
+                android:layout_height="41dp"
+                android:layout_marginStart="20dp"
+                android:layout_marginTop="16dp"
+                android:src="@drawable/bot"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <TextView
+                android:id="@+id/tvChatBot"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                android:layout_marginEnd="16dp"
+                android:background="@drawable/text_bg"
+                android:padding="12dp"
+                android:text="@string/welcome_chatbot"
+                android:textColor="@color/black"
+                android:autoLink="web"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@id/ivChatBot"
+                app:layout_constraintTop_toTopOf="@id/ivChatBot" />
+
+            <!-- Chat bubble 1 -->
+            <ImageView
+                android:id="@+id/ivChatBotUrl"
+                android:layout_width="41dp"
+                android:layout_height="41dp"
+                android:layout_marginStart="20dp"
+                android:src="@drawable/bot"
+                android:visibility="gone"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toStartOf="@+id/tvChatBotUrl"
+                app:layout_constraintTop_toTopOf="@id/tvChatBotUrl" />
+
+            <TextView
+                android:id="@+id/tvChatBotUrl"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                android:layout_marginEnd="16dp"
+                android:layout_marginTop="20dp"
+                android:background="@drawable/text_bg"
+                android:visibility="gone"
+                android:padding="12dp"
+                android:text="@string/chatbot_url_text"
+                android:textColor="@color/black"
+                android:autoLink="web"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@id/ivChatBotUrl"
+                app:layout_constraintTop_toBottomOf="@id/tvChatBot" />
+
+            <!-- Chat bubble 2 -->
+            <ImageView
+                android:id="@+id/ivChatBotResponse"
+                android:layout_width="41dp"
+                android:layout_height="41dp"
+                android:layout_marginStart="20dp"
+                android:visibility="gone"
+                android:src="@drawable/bot"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toStartOf="@+id/tvChatBotResponse"
+                app:layout_constraintTop_toTopOf="@id/tvChatBotResponse" />
+
+            <TextView
+                android:id="@+id/tvChatBotResponse"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                android:layout_marginEnd="16dp"
+                android:layout_marginTop="20dp"
+                android:background="@drawable/text_bg"
+                android:visibility="gone"
+                android:padding="12dp"
+                android:text="@string/chatbot_response_text"
+                android:textColor="@color/black"
+                android:autoLink="web"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@id/ivChatBotResponse"
+                app:layout_constraintTop_toBottomOf="@id/tvChatBotUrl"/>
+
+            <!-- Chat bubble 3 -->
+            <ImageView
+                android:id="@+id/ivChatBotNorm"
+                android:layout_width="41dp"
+                android:layout_height="41dp"
+                android:visibility="gone"
+                android:layout_marginStart="20dp"
+                android:src="@drawable/bot"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toStartOf="@id/tvChatBotNorm"
+                app:layout_constraintTop_toTopOf="@id/tvChatBotNorm" />
+
+            <TextView
+                android:id="@+id/tvChatBotNorm"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                android:layout_marginEnd="16dp"
+                android:layout_marginTop="20dp"
+                android:visibility="gone"
+                android:background="@drawable/text_bg"
+                android:padding="12dp"
+                android:text="@string/chatbot_norm_text"
+                android:textColor="@color/black"
+                android:autoLink="web"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@id/ivChatBotNorm"
+                app:layout_constraintTop_toBottomOf="@id/tvChatBotResponse" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 </ScrollView>
