--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,6 +7,8 @@
     <color name="light_blue">#619DF8</color>
     <color name="light_grey">#D1D1D1</color>
     <color name="dim_grey">#696969</color>
+    <color name="platinum">#EBE8E8</color>
+    <color name="light_house">#F4F3F3</color>
     <color name="holo_red_dark">@android:color/holo_red_dark</color>
     <color name="transparent">@android:color/transparent</color>
 </resources>
